# events_api

./: .env.example  Cargo.toml  Dockerfile  Readme.md  api.http  api_auth.http  docker-compose.yml  upload.http
migrations/: 20260717212904_create_events_table.sql  20260718134339_create_users_table.sql  20260718142011_add_user_id_to_events.sql  20260718143420_add_details_to_events.sql  20260718145905_add_email_verification_to_users.sql  20260718152820_add_last_verified_at.sql  20260718160312_image_cover_to_events.sql  20260718184548_add_meeting_url_to_events.sql
src/: lib.rs  main.rs
src/auth/: extractor.rs  handlers.rs  mod.rs  models.rs  routes.rs
src/common/: email.rs  error.rs  mod.rs  openapi.rs  password.rs  state.rs  storage.rs  video.rs
src/events/: handlers.rs  mod.rs  models.rs  routes.rs  ws.rs
templates/: verify_email.html
tests/: event_test.rs
